# wopweb

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
wopweb/: app.py  cli.py  config.py  db.py  draw.py  models.py  mods.py  server.py  update.py
wopweb/static/css/: style.css
wopweb/templates/: abc.html  abcs.html  base.html  index.html  symbol.html  symbols.html
