[metadata]
name = wopweb
author = texnoforge
author_email = voice@texnoforge.dev
description = Words of Power Web Browser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/texnoforge/wopweb/
project_urls =
    Bug Tracker = https://github.com/texnoforge/wopweb/issues
    Docs = https://texnoforge.github.io/texnomagic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click
    dynaconf
    flask
    pycairo
    sqlalchemy
    texnomagic
include_package_data = True

[options.entry_points]
console_scripts =
    wopweb = wopweb.cli:main
